# volkanicmc-construct

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.cargo/: config  config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docker.yml  main.yml  rust.yml  tag.yml
.vkinclude/: 1-20-paper.properties  1-8-vanilla.properties  b1-7-vanilla.properties  server.properties
containers/: Containerfile.alpine  Containerfile.ubuntu  entrypoint.sh
schemas/: format-1_draft1.json  format-2_draft1.json  format-3-overlay.json  format-3.json
src/: fsobj.rs  hostinfo.rs  main.rs  misc.rs  var.rs
src/exec/: mod.rs  run.rs  script.rs
src/persistence/: copy.rs  info.rs  mod.rs
src/resources/: conf.rs  jdk.rs  jdk.yml  mod.rs  style.rs
src/saveable/: export.rs  import.rs  info.rs  mod.rs
src/template/: manage.rs  mod.rs  parse.rs  resource.rs  var.rs  vkinclude.rs
src/template/jdk_args/: mod.rs  presets.rs
src/template/overlay/: mod.rs  parse.rs
src/template/ports/: mod.rs
src/vkstore/: mod.rs
vktemplates/: 1-21-4-paper.json  1-8-vanilla.json  b1-7-3-vanilla.json  modern-paper.json  template.json
vktemplates/overlays/: add-geyser.json
wix/: License.rtf  main.wxs
