[package]
name = "volkanicmc-construct"
version = "0.1.0"
authors = ["Alexander Hansen <alex@bitzmc.com>"]
edition = "2021"
rust-version = "1.70"
description = "Setup Minecraft servers by description"
repository = "https://github.com/8Bitz0/volkanicmc-construct"
license = "MIT"
keywords = ["minecraft"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22.0"
clap = { version = "4.4.8", features = ["derive"] }
copy_dir = "0.1.3"
flate2 = "1.0.28"
futures-util = "0.3.29"
hex = "0.4.3"
indicatif = "0.17.7"
reqwest = { version = "0.12.3", features = ["stream", "rustls-tls"], default-features = false }
schemars = { version = "0.8.21" }
serde = { version = "1.0.192", features = ["derive"] }
serde_jsonc = "1.0.108"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
sysinfo = "0.30.11"
tar = "0.4.40"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread", "tokio-macros", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
zip = "1.1.4"

[features]
debug_log = []

[profile.dev]
opt-level = 2

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[[bin]]
name = "vkconstruct"
path = "src/main.rs"

[package.metadata.deb]
name = "volkanicmc-construct"

[package.metadata.generate-rpm]
name = "volkanicmc-construct"
assets = [
    { source = "target/release/vkconstruct", dest = "/usr/bin/vkconstruct", mode = "755" }
]
