[package]
name = "volkanicmc-construct"
version = "0.3.0"
authors = ["Alexander Hansen <alex@bitzero.me>"]
edition = "2021"
description = "Setup Minecraft servers by description"
repository = "https://github.com/8Bitz0/volkanicmc-construct"
license = "MIT"
keywords = ["minecraft"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.35", features = ["derive"] }
copy_dir = "0.1.3"
flate2 = "1.1.1"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["stream", "rustls-tls"], default-features = false }
schemars = { version = "0.8.22" }
serde = { version = "1.0.219", features = ["derive"] }
serde_jsonc = "1.0.108"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
sysinfo = "0.34.2"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread", "tokio-macros", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
uuid = { version = "1.16.0", features = ["fast-rng", "v4"] }
walkdir = "2.5.0"
zip = "2.6.1"

[features]
debug_log = []

[profile.dev]
opt-level = 2

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"

[[bin]]
name = "vkconstruct"
path = "src/main.rs"

[package.metadata.deb]
name = "volkanicmc-construct"

[package.metadata.generate-rpm]
name = "volkanicmc-construct"
assets = [
    { source = "target/release/vkconstruct", dest = "/usr/bin/vkconstruct", mode = "755" }
]
